--- a/style.css
+++ b/style.css
@@ -67,12 +67,14 @@ div[class*="col"] {
     color: hsl(348, 100%, 90%, 1);
 }
 
-.column-1 .price span.h1 {
+.column-1 .price-number {
     margin-right: 8px;
     margin-right: 0.5rem;
     color: #fff;
-
+    font-size: 2.5rem;
+    font-weight: 500;
 }
+
 
 .column-1 button {
     background-color: hsla(43, 96%, 59%, 1);
